# tents

./: .gitignore  CMakeLists.txt  README.md  game.c  game_aux.c  game_ext.c  game_prof.c  game_prof.h  game_random.c  game_sdl.c  game_solve.c  game_test_abousseaden.c  game_test_alebousquet.c  game_test_bbedouret.c  game_test_cbanier.c  game_text.c  game_tools.c  game_tools.h  model.c  model.h  queue.c
android/: AndroidManifest.xml  build.xml
android/jni/src/: Android.mk  game_prof.c  game_prof.h
data/: game_10x10.tnt  game_15x15.tnt  game_2x4.tnt  game_3x3.tnt  game_3x3d.tnt  game_3x3w.tnt  game_3x3wd.tnt  game_4x4w.tnt  game_8x8_n4.tnt  game_default_solution.tnt
